"Add missing files"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
 
       - name: Build React Frontend
         working-directory: ./frontend
-        run: npm run build
+        run: npm ci
 
       #####################################
       # Run Tests for Backend and Frontend
