--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,25 +43,20 @@ jobs:
       #####################################
       # Setup Node.js for Frontend (React)
       #####################################
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
       - name: Cache Node modules
         uses: actions/cache@v4
         with:
-          path: frontend/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('frontend/package-lock.json') }}
+          path: frontend/movies_jpa_frontend/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('frontend/movies_jpa_frontend/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
       - name: Install Frontend Dependencies
-        working-directory: ./frontend
+        working-directory: ./frontend/movies_jpa_frontend
         run: npm install
 
       - name: Build React Frontend
-        working-directory: ./frontend
+        working-directory: ./frontend/movies_jpa_frontend
         run: npm ci
 
       #####################################
