--- a/frontend/movies_jpa_frontend/package.json
+++ b/frontend/movies_jpa_frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.0.0",
@@ -38,5 +39,4 @@
     ]
   },
   "proxy": "http://localhost:8080"
-
 }
